--- a/home.html
+++ b/home.html
@@ -86,10 +86,10 @@
         <div class="info-box">
             <h2>Online publishing link</h2>
             <p style="font-size: 1.2em; text-align: center;">
-                <a href="#" class="link" target="_blank">تفضل بزيارة </a>
+                <a href="#" class="link" target="_blank"> https://hishamalfarkh.github.io/hisham_314885_IWB201_Website/
             </p>
             <p style="text-align: center; color: #070707; margin-top: 10px;">
-                (https://hishamalfarkh.github.io/IWB201_Sit/)
+                تفضل بزيارتنا
             </p>
         </div>
 
@@ -112,4 +112,5 @@
         </div>
     </div>
 </body>
+
 </html>
