--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
         <div class="info-box">
             <h2>Online publishing link</h2>
             <p style="font-size: 1.2em; text-align: center;">
-                <a href="#" class="link" target="_blank"> https://hishamalfarkh.github.io/hisham_314885_IWB201_Website/
+                <a href="#" class="link" target="_blank"> https://hishamalfarkh.github.io/hisham_314885_IWB201_Website/</a>
             </p>
             <p style="text-align: center; color: #070707; margin-top: 10px;">
                 تفضل بزيارتنا
@@ -114,3 +114,4 @@
 </body>
 
 </html>
+
